@@ -1,4 +1,6 @@
 version 1.0.3 (not yet released)
+           * added kav7 (Kavrayskiy VII) and eck4 (Eckert IV) projections
+             (https://github.com/matplotlib/basemap/issues/9).
            * update pyproj source from pyproj.googlecode.com. Includes
              new more robust and accurate pure python code for geodesic computations
              from geographiclib.
